--- a/template/package.json
+++ b/template/package.json
@@ -14,6 +14,7 @@
     "lint": "eslint --ext .js,.vue src test build config"{{/lint}}
   },
   "dependencies": {
+    "axios": "^0.16.1",
     "lodash": "^4.17.4",
     "vue": "^2.2.6"{{#router}},
     "vue-router": "^2.3.1"{{/router}}
