--- a/template/package.json
+++ b/template/package.json
@@ -22,6 +22,7 @@
   "devDependencies": {
     "autoprefixer": "^6.7.2",
     "babel-core": "^6.22.1",
+    "babel-polyfill": "^6.23.0",
     {{#lint}}
     "babel-eslint": "^7.1.1",
     {{/lint}}
