feat(app): Fix lint for css

--- a/template/.jsbeautifyrc
+++ b/template/.jsbeautifyrc
@@ -17,6 +17,9 @@
     "end_with_newline": false,
     "indent_char": " ",
     "indent_size": 2,
+    "newline_between_rules": true,
+    "max_preserve_newlines": 1,
+    "preserve_newlines": true,
     "selector_separator": " ",
     "selector_separator_newline": false
   },
