--- a/template/package.json
+++ b/template/package.json
@@ -16,8 +16,9 @@
   "dependencies": {
     "axios": "^0.16.1",
     "lodash": "^4.17.4",
-    "vue": "^2.2.6"{{#router}},
-    "vue-router": "^2.3.1"{{/router}}
+    "vue": "^2.3.2"{{#router}},
+    "vue-router": "^2.3.1"{{/router}},
+    "vuex": "^2.3.1"
   },
   "devDependencies": {
     "autoprefixer": "^6.7.2",
