--- a/template/package.json
+++ b/template/package.json
@@ -8,7 +8,11 @@
     "dev": "node build/dev-server.js",
     "start": "node build/dev-server.js",
     "build": "node build/build.js"{{#unit}},
-    "unit": "cross-env BABEL_ENV=test karma start test/unit/karma.conf.js --single-run"{{/unit}}{{#e2e}},
+    "unit": "npm run karma",
+    "mocha": "mocha-webpack --webpack-config build/webpack.test.conf.js --require test/unit/mocha-pre-test.js \"test/unit/**/*.spec.js\" ",
+    "karma:coverage": "cross-env BABEL_ENV=test COVERAGE=true karma start test/unit/karma.conf.js --single-run",
+    "karma:watch": "cross-env BABEL_ENV=test COVERAGE=false karma start test/unit/karma.conf.js --auto-watch",
+    "karma": "cross-env BABEL_ENV=test karma start test/unit/karma.conf.js --single-run"{{/unit}}{{#e2e}},
     "e2e": "node test/e2e/runner.js"{{/e2e}}{{#if_or unit e2e}},
     "test": "{{#unit}}npm run unit{{/unit}}{{#unit}}{{#e2e}} && {{/e2e}}{{/unit}}{{#e2e}}npm run e2e{{/e2e}}"{{/if_or}}{{#lint}},
     "lint": "eslint --ext .js,.vue src test build config"{{/lint}}
@@ -68,6 +72,7 @@
     "cross-env": "^4.0.0",
     "karma": "^1.4.1",
     "karma-coverage": "^1.1.1",
+    "karma-jsdom-launcher": "^6.1.1",
     "karma-mocha": "^1.3.0",
     "karma-phantomjs-launcher": "^1.0.2",
     "karma-phantomjs-shim": "^1.4.0",
@@ -77,6 +82,7 @@
     "karma-webpack": "^2.0.2",
     "lolex": "^1.5.2",
     "mocha": "^3.2.0",
+    "mocha-webpack": "^0.7.0",
     "chai": "^3.5.0",
     "sinon": "^2.1.0",
     "sinon-chai": "^2.8.0",
