--- a/template/package.json
+++ b/template/package.json
@@ -87,6 +87,7 @@
     "sinon": "^2.1.0",
     "sinon-chai": "^2.8.0",
     "inject-loader": "^3.0.0",
+    "jsdom": "^11.0.0",
     "babel-plugin-istanbul": "^4.1.1",
     "phantomjs-prebuilt": "^2.1.14",
     {{/unit}}
