--- a/template/package.json
+++ b/template/package.json
@@ -19,9 +19,11 @@
   },
   "dependencies": {
     "axios": "^0.16.1",
+    "local-storage": "^1.4.2",
     "lodash": "^4.17.4",
     "vue": "^2.3.2"{{#router}},
     "vue-router": "^2.3.1"{{/router}},
+    "vue-i18n": "^7.0.3",
     "vuex": "^2.3.1"
   },
   "devDependencies": {
