--- a/template/package.json
+++ b/template/package.json
@@ -88,6 +88,8 @@
     "chai": "^3.5.0",
     "sinon": "^2.1.0",
     "sinon-chai": "^2.8.0",
+    "stylus": "^0.54.5",
+    "stylus-loader": "^3.0.1",
     "inject-loader": "^3.0.0",
     "jsdom": "^11.0.0",
     "babel-plugin-istanbul": "^4.1.1",
