--- a/template/package.json
+++ b/template/package.json
@@ -9,13 +9,24 @@
     "start": "node build/dev-server.js",
     "build": "node build/build.js"{{#unit}},
     "unit": "npm run karma",
-    "mocha": "mocha-webpack --webpack-config build/webpack.test.conf.js --require test/unit/mocha-pre-test.js \"test/unit/**/*.spec.js\" ",
+    "mocha:coverage": "cross-env BABEL_ENV=test nyc npm run mocha",
+    "mocha:watch": "npm run mocha -- --watch",
+    "mocha": "cross-env BABEL_ENV=test mocha-webpack --webpack-config build/webpack.test.conf.js --require test/unit/mocha-pre-test.js  test/unit/index.js",
     "karma:coverage": "cross-env BABEL_ENV=test COVERAGE=true karma start test/unit/karma.conf.js --single-run",
     "karma:watch": "cross-env BABEL_ENV=test COVERAGE=false karma start test/unit/karma.conf.js --auto-watch",
     "karma": "cross-env BABEL_ENV=test karma start test/unit/karma.conf.js --single-run"{{/unit}}{{#e2e}},
     "e2e": "node test/e2e/runner.js"{{/e2e}}{{#if_or unit e2e}},
     "test": "{{#unit}}npm run unit{{/unit}}{{#unit}}{{#e2e}} && {{/e2e}}{{/unit}}{{#e2e}}npm run e2e{{/e2e}}"{{/if_or}}{{#lint}},
     "lint": "eslint --ext .js,.vue src test build config"{{/lint}}
+  },
+  "nyc": {
+    "reporter": [
+      "lcov",
+      "text",
+      "text-summary"
+    ],
+    "sourceMap": false,
+    "instrument": false
   },
   "dependencies": {
     "axios": "^0.16.1",
@@ -34,6 +45,7 @@
     "babel-eslint": "^7.1.1",
     {{/lint}}
     "babel-loader": "^6.2.10",
+    "babel-plugin-istanbul": "^4.1.1",
     "babel-plugin-transform-runtime": "^6.22.0",
     "babel-preset-env": "^1.3.2",
     "babel-preset-stage-2": "^6.22.0",
@@ -85,7 +97,7 @@
     "lolex": "^1.5.2",
     "material-design-icons-font": "^2.2.3",
     "mocha": "^3.2.0",
-    "mocha-webpack": "^0.7.0",
+    "mocha-webpack": "^1.0.0-beta.1",
     "chai": "^3.5.0",
     "sinon": "^2.1.0",
     "sinon-chai": "^2.8.0",
