--- a/template/package.json
+++ b/template/package.json
@@ -20,13 +20,20 @@
     "lint": "eslint --ext .js,.vue src test build config"{{/lint}}
   },
   "nyc": {
+    "check-coverage": true,
+    "lines": 60,
+    "statements": 60,
+    "functions": 60,
+    "branches": 60,
     "reporter": [
       "lcov",
       "text",
       "text-summary"
     ],
     "sourceMap": false,
-    "instrument": false
+    "instrument": false,
+    "cache": true,
+    "report-dir": "./test/unit/coverage"
   },
   "dependencies": {
     "axios": "^0.16.1",
@@ -81,6 +88,7 @@
     "friendly-errors-webpack-plugin": "^1.1.3",
     "html-webpack-plugin": "^2.28.0",
     "http-proxy-middleware": "^0.17.3",
+    "jsdom-global": "^3.0.2",
     "webpack-bundle-analyzer": "^2.2.1",
     {{#unit}}
     "cross-env": "^4.0.0",
@@ -116,6 +124,7 @@
     {{/e2e}}
     "semver": "^5.3.0",
     "shelljs": "^0.7.6",
+    "nyc": "^11.0.2",
     "opn": "^4.0.2",
     "optimize-css-assets-webpack-plugin": "^1.3.0",
     "ora": "^1.2.0",
