--- a/template/package.json
+++ b/template/package.json
@@ -46,6 +46,7 @@
   },
   "devDependencies": {
     "autoprefixer": "^6.7.2",
+    "avoriaz": "^2.3.0",
     "babel-core": "^6.22.1",
     "babel-polyfill": "^6.23.0",
     {{#lint}}
